# haskshell

./: #Lexer.x#  #Parser.y#  .#Lexer.x  .#Parser.y  .dir-locals.el  .gitattributes  .gitignore  Haskshell.cabal  Lexer.hs  Lexer.x  Main  Main.hs  Makefile  Parser  Parser.hi  Parser.hs  Parser.info  Parser.y  README.org  bash_grammar.txt  cabal.sandbox.config  infLoopTest  infLoopTest.c  lsout.txt  pathtest.sh  spec.org  stack.yaml  testcat.sh
src/: Haskshell.hs  Lexer.x  Main.hs  Parser.y  Parser.y.bak  Types.hs
tests/: BuiltInsSpec.hs  HaskshellSpec.hs  TestUtils.hs  VarsSpec.hs
