name:                Haskshell
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Parser.y Lexer.x
cabal-version:       >=1.10

executable Haskshell
  main-is:             Main.hs
  other-modules:       Types, Parser, Lexer
--, Haskshell
  hs-source-dirs:      src
  ghc-options:         -O2 -fwarn-unused-imports -threaded
  build-depends:       base >=4.7
                     , mtl >=2.1
                     , unix >=2.7 && <2.8
                     , readline >= 1.0.1.0
                     , array >= 0.5.0.0
                     , process >= 1.2.0.0
                     , lens
                     , filepath
                     , safe
-- >= 1.4.0.0
                     , directory
-- >= 1.2.3.1
                     , containers >= 0.5.5.0
                     , split
                     , hspec

  build-tools:         happy, alex
  default-language:    Haskell2010

-- Test-Suite Haskshell-Tests
--            Type: exitcode-stdio-1.0
--            Hs-source-dirs: tests src .stack-work/dist/x86_64-linux/Cabal-1.22.4.0/build/Haskshell/Haskshell-tmp/

--            Main-is: Spec.hs
-- --           Ghc-options: -Wall
--            Other-modules: Haskshell Parser Lexer
--            default-language:    Haskell2010
--            Build-depends:  base >=4.7
--                          , mtl >=2.1
--                          , unix >=2.7 && <2.8
--                          , readline >= 1.0.1.0
--                          , array >= 0.5.0.0
--                          , process >= 1.2.0.0
--                          , lens
--                          , filepath
-- -- >= 1.4.0.0
--                          , directory
-- -- >= 1.2.3.1
--                          , containers >= 0.5.5.0
--                          , split
--                          , hspec
