name:                Haskshell
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:        LICENSE
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Parser.y Lexer.x
cabal-version:       >=1.10

Library
--  other-modules:       Types, Parser, Lexer, Haskshell
  exposed-modules:     Haskshell, Types, Parser, Lexer
  hs-source-dirs:      src
  ghc-options:         -O2 -fwarn-unused-imports  -fwarn-name-shadowing -fno-warn-tabs -threaded
  build-depends:       base >=4.7
                     , mtl >=2.1
                     , unix >=2.7 && <2.8
                     , array >= 0.5.0.0
                     , process >= 1.2.0.0
                     , lens
                     , filepath
                     , safe
-- >= 1.4.0.0
                     , directory
-- >= 1.2.3.1
                     , containers >= 0.5.5.0
                     , split
                     , hspec
                     , Glob >= 0.7.5
                     , haskeline
                     , MissingH

  build-tools:         happy, alex
  default-language:    Haskell2010

executable Haskshell-bin
  main-is:             Main.hs
  other-modules:       Haskshell, Types, Parser, Lexer
  hs-source-dirs:      src
  ghc-options:         -O2 -fwarn-unused-imports  -fwarn-name-shadowing -fno-warn-tabs -threaded
  build-depends:       base >=4.7
                     , Haskshell
                     , mtl >=2.1
                     , unix >=2.7 && <2.8
                     , array >= 0.5.0.0
                     , process >= 1.2.0.0
                     , lens
                     , filepath
                     , safe
-- >= 1.4.0.0
                     , directory
-- >= 1.2.3.1
                     , containers >= 0.5.5.0
                     , split
                     , hspec
                     , Glob >= 0.7.5
                     , haskeline
                     , MissingH


  build-tools:         happy, alex
  default-language:    Haskell2010


Test-Suite Haskshell-Tests
           Type: exitcode-stdio-1.0
           Hs-source-dirs: tests
           Main-is: Spec.hs
           other-modules: TestUtils, BuiltInsSpec, VarsSpec
           default-language:    Haskell2010
           Build-depends:  base >=4.7
                         , mtl >=2.1
                         , unix >=2.7 && <2.8
                         , array >= 0.5.0.0
                         , process >= 1.2.0.0
                         , lens
                         , filepath
                         , safe
                         , haskeline
                         , MissingH
-- >= 1.4.0.0
                         , directory
-- >= 1.2.3.1
                         , containers >= 0.5.5.0
                         , split
                         , Glob >= 0.7.5
                         , Haskshell
                         , hspec
                         , hspec-core
                         , hspec-expectations
-- for capturing io
                         , silently
